@@ -27,4 +27,4 @@ echo "Setting Heap to ${heap_size}"
 export JVM_MEM_OPTS="-Xms${heap_size} -Xmx${heap_size}  "
         
 echo "Starting MS4J Hello World"
-/opt/jdk1.8.0_162/bin/java  -Xmx${heap_size} -XX:+PrintGCDetails -Xloggc:${heap_size}_Heap_${num_users}_Users_GCLog  -jar /home/wso2/Pasindu/Hello-Service-*.jar
+/opt/jdk1.8.0_162/bin/java -Xloggc:/home/wso2/Pasindu/GCLogs/${heap_size}_Heap_${num_users}_Users_GCLog.txt  -verbose:gc -XX:+PrintGCDateStamps -Xms${heap_size} -Xmx${heap_size}  -jar /home/wso2/Pasindu/Hello-Service-*.jar
